tests/checker/diagnostics/0084_core_packet_payload_mismatch_07.ml.infer.expected
File "0084_core_packet_payload_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0084_core_packet_payload_mismatch_07 is not a valid module name.

File "0084_core_packet_payload_mismatch_07.ml", line 2, characters 28-32:
2 | let _ : int packet = Packet true
                                ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
